--- a/css/features.css
+++ b/css/features.css
@@ -1,1 +1,114 @@
-.features{padding:20px 25px 50px 40px}.features h2{margin:0 0 20px -15px}.features .item{margin-bottom:20px;padding:25px 30px 25px 40px;background-color:#f6f6f6;box-shadow:5px 11px 15px 5px rgba(0,0,0,.09);border-radius:25px;font-family:"Roboto"}.item__circle{position:absolute;width:35px;height:25px;margin:10px -60px;padding-top:10px;border-radius:35px;background-color:#9356dc;font-family:"Roboto";font-weight:600;color:#fff;text-align:center}.item__description{font-size:18px;font-weight:600}.item__icon{color:#7e7e7e;font-weight:600;margin-right:20px}@media(min-width: 768px)and (max-width: 992px){.features .item{margin-left:20px}.features .item .item{width:85%}}@media(min-width: 992px)and (max-width: 1200px){.features h2{width:100%}.features .features-container{width:100%;margin:auto;display:flex;flex-wrap:wrap}.features .features-container .item{width:100%;margin-bottom:30px;text-align:center}}@media(min-width: 1200px)and (max-width: 1400px){.features h2{width:100%}.features .features-container{display:flex;width:100%;margin-left:25px}.features .item{width:33%;margin-right:40px}}@media(min-width: 1400px){.features .features-container{width:90%;display:flex;justify-content:space-between;margin:25px auto auto auto}.features .item{width:25%;text-align:center}.features .item:not(:last-of-type){margin-right:60px}.features h2{width:100%;text-align:center;margin:35px auto 50px auto}}/*# sourceMappingURL=features.css.map */
+/** """ Features """ section */
+/** Mobile-first */
+.features {
+  padding: 20px 25px 50px 40px;
+}
+.features h2 {
+  margin: 25px 0 30px -15px;
+}
+.features__item {
+  margin-bottom: 20px;
+  padding: 25px 30px 25px 40px;
+  background-color: #F6F6F6;
+  box-shadow: 5px 11px 15px 5px rgba(0, 0, 0, 0.09);
+  border-radius: 25px;
+  font-family: "Roboto";
+  /* """ Features """ item circle */
+  /* """ Features """ card title */
+  /* """ Features """ card title icon */
+}
+.features__item:hover {
+  background-color: #F5EDFF;
+}
+.features__item:hover i {
+  color: #9356DC;
+}
+.features__item__circle {
+  position: absolute;
+  width: 35px;
+  height: 25px;
+  margin: 10px -60px;
+  padding-top: 10px;
+  border-radius: 35px;
+  background-color: #9356DC;
+  font-family: "Roboto";
+  font-weight: 600;
+  color: #fff;
+  text-align: center;
+}
+.features__item__description {
+  font-size: 18px;
+  font-weight: 600;
+}
+.features__item i {
+  color: #7E7E7E;
+  font-weight: 600;
+  margin-right: 20px;
+}
+
+/* Targets small screens */
+@media (min-width: 768px) and (max-width: 992px) {
+  .features__item {
+    margin-left: 20px;
+    width: 85%;
+  }
+}
+/* Targets tablets */
+@media (min-width: 992px) and (max-width: 1200px) {
+  .features {
+    /* A container to make elements displayed flex on high resolution */
+  }
+  .features__container {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .features__item {
+    width: 100%;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .features h2 {
+    width: 100%;
+  }
+}
+/* Targets large screens */
+@media (min-width: 1200px) and (max-width: 1400px) {
+  .features__container {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    margin-left: 25px;
+  }
+  .features__item {
+    width: 33%;
+    margin-right: 40px;
+  }
+  .features h2 {
+    width: 100%;
+  }
+}
+/* Targets extra-large screens */
+@media (min-width: 1400px) {
+  .features__container {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    margin: 25px auto auto auto;
+  }
+  .features__item {
+    width: 25%;
+    text-align: center;
+  }
+  .features__item:not(:last-of-type) {
+    margin-right: 60px;
+  }
+  .features h2 {
+    width: 100%;
+    text-align: center;
+    margin: 35px auto 50px auto;
+  }
+}
+
+/*# sourceMappingURL=features.css.map */
