--- a/sass/overall.scss
+++ b/sass/overall.scss
@@ -4,7 +4,10 @@ $project_font: 'Shrikhand';
 $content_font: 'Roboto';
 
 $bg_light: #F6F6F6;
+
+$feat_icon_color: #7E7E7E;
 $feat_circle_bg: #9356DC;
-$feat_item_icon_color: #7E7E7E;
+$feat_hover_bg: #F5EDFF;
+$feat_hover_icon_color: #9356DC;
 
 $cards_shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
